[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listing-grader"
version = "1.0.0"
description = "Score your Airbnb listing 0-100 with actionable recommendations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "HostTools", email = "contact@hosttools.io"}
]
keywords = ["airbnb", "listing", "grader", "score", "optimization", "host"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/rabi3laser/hosttools"
Documentation = "https://github.com/rabi3laser/hosttools#readme"
Repository = "https://github.com/rabi3laser/hosttools"

[project.scripts]
listing-grader = "listing_grader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
