[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "listing-grader"
version = "2.0.0"
description = "Airbnb Visibility Score - Algorithm Aligned (2025)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "HostTools", email = "contact@hosttools.io"}
]
keywords = [
    "airbnb", "listing", "grader", "score", "optimization", "host",
    "algorithm", "ranking", "visibility", "guest-favorites", "seo"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = [
    "airbnb-scraper @ git+https://github.com/rabi3laser/airbnb-scraper.git",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/rabi3laser/hosttools"
Documentation = "https://github.com/rabi3laser/hosttools/tree/main/services/listing-grader#readme"
Repository = "https://github.com/rabi3laser/hosttools"
Changelog = "https://github.com/rabi3laser/hosttools/commits/main"

[project.scripts]
listing-grader = "listing_grader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
